<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/matuto"
    tools:context=".Menu_Principal">

    <Button
        android:id="@+id/btn_jogar"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_menu0"
        android:text="@string/novo_jogo"
        android:textAlignment="center"
        android:textColor="#F5F2F2"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_recordes"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_jogar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_menu0"
        android:text="@string/recordes"
        android:textAlignment="center"
        android:textColor="#F5F2F2" />

    <Button
        android:id="@+id/btn_opc"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_recordes"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_menu0"
        android:text="@string/op_es"
        android:textColor="#F5F2F2" />

    <Button
        android:id="@+id/btn_sair"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_opc"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_menu0"
        android:text="@string/sair"
        android:textColor="#F5F2F2" />


</RelativeLayout>