<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00090808"
    tools:context=".Main2Activity">

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/tela1_btn01_1"
        android:text="@string/cadastrar"
        android:textColor="#070707"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/userIDTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="#E8BDA7A7">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userIDTextInputLayout"
            android:layout_alignStart="@+id/userIDTextInputLayout"
            android:layout_alignBottom="@+id/userIDTextInputLayout"
            android:ems="25"
            android:hint="@string/nome"
            android:inputType="textCapWords|textCapSentences"
            android:maxLength="20" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_senha1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userIDTextInputLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLength="16" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmarSenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_senha1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:maxLength="16" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/CE"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmarSenha"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userIDTextInputLayout"
            android:layout_alignStart="@+id/userIDTextInputLayout"
            android:layout_alignBottom="@+id/userIDTextInputLayout"
            android:maxLength="50"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/mandacaru"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/tela1_btn01_1"
        android:text="@string/mandacaru" />

    <Button
        android:id="@+id/cardeiro"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/palma"
        android:layout_toEndOf="@+id/mandacaru"
        android:background="@drawable/tela1_btn01_1"
        android:text="@string/cardeiro" />

    <Button
        android:id="@+id/palma"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/tela1_btn01_1"
        android:text="@string/palma" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="390dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="10dp"
        android:text="@string/clique_em_um_dos_3_bot_es_a_baixo_para_escolher_o_cl"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_ninja"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="126dp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_ninja"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/cardeiro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/txt_status_1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mandacaru"
        android:layout_alignParentStart="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="12dp"
        android:text="@string/for_a_m_gia_rapidez_vida"
        android:textAlignment="viewEnd"
        android:textColor="#FD0303"
        android:textSize="12sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/txt_status_2"
        android:layout_width="16dp"
        android:layout_height="60dp"
        android:layout_below="@+id/mandacaru"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/txt_status_1"
        android:textAlignment="textStart"
        android:textSize="12sp" />
</RelativeLayout>