<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c53da84861e8efdc4ff8989313b125c9"
    tools:context=".New_Game">

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_battle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/dado"
        android:contentDescription="@string/todooo" />

    <TextView
        android:id="@+id/hpU"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/hp_img"
        android:padding="16dp"
        android:textColor="#FFFFFFFF" />

    <TextView
        android:id="@+id/hpNPC"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/hp_img"
        android:padding="16dp"
        android:textColor="#FFFFFFFF" />

    <TextView
        android:id="@+id/txt_battle"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/hpU"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/tela1_btn01_2"
        android:padding="8dp"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_op"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_menu0"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/btn_53"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_51"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_new0"
        android:text="@string/a3" />

    <Button
        android:id="@+id/btn_51"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_ataques"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_new0"
        android:text="@string/a1" />

    <Button
        android:id="@+id/btn_54"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btn_52"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/btn_53"
        android:background="@drawable/btn_new0"
        android:text="@string/a4" />

    <Button
        android:id="@+id/btn_op"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imgBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_op0"
        android:text="@string/sair" />

    <Button
        android:id="@+id/btn_52"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txt_ataques"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/btn_51"
        android:background="@drawable/btn_new0"
        android:text="@string/a2" />

    <TextView
        android:id="@+id/txt_ataques"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/txt_battle"
        android:layout_alignParentStart="false"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/imgBtn"
        android:background="@drawable/tela1_btn01_2"
        android:clickable="false"
        android:isScrollContainer="false"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingRight="8dp"
        android:textAlignment="textStart"
        android:textColor="#03FFC4"
        android:textIsSelectable="false"
        android:textStyle="bold" />

</RelativeLayout>